make it workable OOTB

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 
 [platformio]
 src_dir = .
-lib_dir = ../..
-boards_dir = ../../platformio/boards
+lib_dir = .
+boards_dir = platformio/boards
 
 [env]
 platform = espressif32@6.5.0
